# context_chat_backend

./: .dockerignore  .flake8  .gitignore  .nextcloudignore  .pre-commit-config.yaml  AGENTS.md  CCBE-R2R_Endpoint_map.txt  Dockerfile  Dockerfile.cpu  Dockerfile.dev  Dockerfile_CUDA11.8  Dockerfile_CUDA12.3  Makefile  NOTICE.md  PRD.md  R2R-Integration.md  R2RAPIEndpointsSummary.txt  README.md  REUSE.toml  app.py  ccbe.env.example  changelog.md  config.cpu.yaml  config.gpu.yaml  config.py  config.yaml  config_cuda.yaml  docker-compose.r2r-prod.example.yaml  docker-compose.yaml  env.example  example.env  genrepair.sh  harp_connect.sh  hwdetect.sh  krankerl.toml  logger_config.k8s.yaml  logger_config.yaml  logger_config_em.yaml  main.py  main_em.py  (+17 more)
.github/: CODEOWNERS  dependabot.yml
.run/: context_chat_backend.xml  cwyd_backend.run.xml  schackles.xml
_ext/: .gitignore
appinfo/: info.xml
context_chat_backend/: __init__.py  config_parser.py  controller.py  download.py  dyn_loader.py  log_context.py  logger.py  mimetype_list.py  network_em.py  ocs_utils.py  setup_functions.py  startup_tests.py  task_fetcher.py  types.py  utils.py
dockerfile_scripts/: entrypoint.sh  install_deps.sh  install_frpc.sh  install_py11.sh  run_embedding.sh
docs/: ccbe_r2r_mapping.md  endpoints.md
persistent_storage/: config.cpu.yaml  config.yaml
schackles/: __init__.py  controller.py  download.py  ocs_utils.py  utils.py
scripts/: print_routes.py
src/: controller.py  main.py  utils.py
tests/: test_appapi_version_error.py  test_delete_sources_r2r.py  test_docsearch_retry.py  (+3 more)
(+101 files in other folders)
